edit the comment in function

--- a/03_movies.ipynb
+++ b/03_movies.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03_movies.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM947czCI4vdBm1OhP+0aNX",
+      "authorship_tag": "ABX9TyP8StzX7Cy/DPcCXCnT5Tlm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,16 +72,16 @@
       "metadata": {
         "id": "uufJmaSIaUbL",
         "colab_type": "code",
+        "outputId": "00860776-d3f0-4f3b-f7b8-cea739fa5759",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
-        },
-        "outputId": "00860776-d3f0-4f3b-f7b8-cea739fa5759"
+        }
       },
       "source": [
         "movies.info()"
       ],
-      "execution_count": 257,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,16 +104,16 @@
       "metadata": {
         "id": "R6jenJq5aZuw",
         "colab_type": "code",
+        "outputId": "efbd726d-59f5-463e-cf88-4ca60df114e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "efbd726d-59f5-463e-cf88-4ca60df114e6"
+        }
       },
       "source": [
         "ratings.info()"
       ],
-      "execution_count": 258,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,16 +151,16 @@
       "metadata": {
         "id": "zKkb4rNybyFk",
         "colab_type": "code",
+        "outputId": "5aa74330-6ca4-4225-852e-b429950752df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "5aa74330-6ca4-4225-852e-b429950752df"
+        }
       },
       "source": [
         "df.info()"
       ],
-      "execution_count": 260,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,16 +199,16 @@
       "metadata": {
         "id": "IduumgQ8ePTK",
         "colab_type": "code",
+        "outputId": "9d3e9a33-8dbf-405b-f936-5ed3ca082d53",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        },
-        "outputId": "9d3e9a33-8dbf-405b-f936-5ed3ca082d53"
+        }
       },
       "source": [
         "df"
       ],
-      "execution_count": 262,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,16 +350,16 @@
       "metadata": {
         "id": "qy8zPC0tfk8w",
         "colab_type": "code",
+        "outputId": "17476c2f-0529-46a2-d6e9-62181d89d098",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "17476c2f-0529-46a2-d6e9-62181d89d098"
+        }
       },
       "source": [
         "df['rating'].value_counts()"
       ],
-      "execution_count": 263,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -414,16 +414,16 @@
       "metadata": {
         "id": "HQ0fSenkg6ld",
         "colab_type": "code",
+        "outputId": "bd56be92-385b-4931-f88b-922d44cbacaa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        },
-        "outputId": "bd56be92-385b-4931-f88b-922d44cbacaa"
+        }
       },
       "source": [
         "movie_df"
       ],
-      "execution_count": 265,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -541,16 +541,16 @@
       "metadata": {
         "id": "yzNw4tKvg9UR",
         "colab_type": "code",
+        "outputId": "4652085a-abef-4e51-ac5b-999515fcbdb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "4652085a-abef-4e51-ac5b-999515fcbdb1"
+        }
       },
       "source": [
         "movie_df.info()"
       ],
-      "execution_count": 266,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,10 +599,7 @@
         "    # put this user' movie into her basket\n",
         "    basket.append(movie)\n",
         "  else :\n",
-        "    \n",
-        "    # I will choose only the user who watch the movie I'm interested in (movie_title)\n",
-        "    #if movie_title in basket :\n",
-        "      # put the former user's basket into watch_lists\n",
+        "    # put the former user's basket into watch_lists\n",
         "    watch_lists.append(basket)\n",
         "    \n",
         "    # empty basket\n",
@@ -613,7 +610,7 @@
         "    # put this new user's movie into basket\n",
         "    basket.append(movie)\n",
         "\n",
-        "#if movie_title in basket :\n",
+        "#put the last basket into watch_lists\n",
         "watch_lists.append(basket)\n"
       ],
       "execution_count": 0,
@@ -624,16 +621,16 @@
       "metadata": {
         "id": "GAU3gEnBjbG7",
         "colab_type": "code",
+        "outputId": "7a7d0342-5f67-40c9-a9cc-61a232189fe7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7a7d0342-5f67-40c9-a9cc-61a232189fe7"
+        }
       },
       "source": [
         "len(watch_lists)"
       ],
-      "execution_count": 268,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,16 +651,16 @@
       "metadata": {
         "id": "os4nOoIvm_mQ",
         "colab_type": "code",
+        "outputId": "dcdb60aa-a9e2-4f05-cbb9-8d446b3b219f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 952
-        },
-        "outputId": "dcdb60aa-a9e2-4f05-cbb9-8d446b3b219f"
+        }
       },
       "source": [
         "watch_lists[:2]"
       ],
-      "execution_count": 269,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,16 +745,16 @@
       "metadata": {
         "id": "_LgvjVW-nYia",
         "colab_type": "code",
+        "outputId": "dab7bcd5-ea92-40a9-a7a8-235677ea35d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "dab7bcd5-ea92-40a9-a7a8-235677ea35d6"
+        }
       },
       "source": [
         "! pip install apyori"
       ],
-      "execution_count": 270,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -811,16 +808,16 @@
       "metadata": {
         "id": "Xy9U-i3-zBya",
         "colab_type": "code",
+        "outputId": "de0b3c09-be12-400b-81e7-0f93e592d7a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "de0b3c09-be12-400b-81e7-0f93e592d7a6"
+        }
       },
       "source": [
         "len(result)"
       ],
-      "execution_count": 276,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -841,16 +838,16 @@
       "metadata": {
         "id": "8CAZvGYr1QfZ",
         "colab_type": "code",
+        "outputId": "ebd3ce46-978c-40b3-86e2-7566859c371b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "ebd3ce46-978c-40b3-86e2-7566859c371b"
+        }
       },
       "source": [
         "result[1]"
       ],
-      "execution_count": 284,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,16 +893,16 @@
       "metadata": {
         "id": "c7S9C1mdYTNi",
         "colab_type": "code",
+        "outputId": "6bf789f6-4d95-4197-a855-fcb1ab04953a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 545
-        },
-        "outputId": "6bf789f6-4d95-4197-a855-fcb1ab04953a"
+        }
       },
       "source": [
         "result_df.sort_values('lift', ascending=False)"
       ],
-      "execution_count": 289,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
